subo ejercicio clase 4 hecho

--- a/clase_04/ejercicio_formulario/codigo/index.html
+++ b/clase_04/ejercicio_formulario/codigo/index.html
@@ -54,6 +54,7 @@
             <textarea
               id="descripcion"
               placeholder="Escribe una breve descripción del robot..."
+              required
             ></textarea>
           </div>
 
